// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageIcon should render with custom icon content 1`] = `
.circuit-0 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-0 {
    margin: 0 16px 0 0;
  }
}

<div
  class="circuit-0 circuit-1"
>
  <div>
    Custom content
  </div>
</div>
`;

exports[`MessageIcon should render with default styles 1`] = `
.circuit-0 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-0 {
    margin: 0 16px 0 0;
  }
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`MessageIcon should render with error icon 1`] = `
.circuit-0 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-0 {
    margin: 0 16px 0 0;
  }
}

<div
  class="circuit-0 circuit-1"
>
  <div>
    message-error.svg
  </div>
</div>
`;

exports[`MessageIcon should render with warning icon 1`] = `
.circuit-2 {
  display: block;
  margin: 0 0 16px 0;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  line-height: 0;
}

@media (min-width:480px) {
  .circuit-2 {
    margin: 0 16px 0 0;
  }
}

.circuit-0 rect {
  fill: #D8A413;
}

<div
  class="circuit-2 circuit-3"
>
  <div
    class="circuit-0 circuit-1"
  >
    message-success.svg
  </div>
</div>
`;
